# 02125_RISC-V_Simulator

./: .gitignore  NOTES.md  PLAN.md  README.md
.github/workflows/: static.yml
5_stage_simulator/: Cargo.toml  documentation.sh
5_stage_simulator/src/: control.rs  counter.rs  decode.rs  documentation.rs  execute.rs  fetch.rs  forward.rs  foward.rs  hazard.rs  lib.rs  main.rs  mem_access.rs  printer.rs  registers.rs  simulator_engine.rs  writeback.rs
5_stage_simulator/tests/: unit_tests.rs
isa_simulator/: Cargo.toml
isa_simulator/src/: main.rs  simulator.rs
isa_simulator/tests/: add_test.rs  unit_tests.rs
simulator_engine/: Cargo.toml
simulator_engine/src/: decode.rs  execute.rs  fetch.rs  main.rs  mem_access.rs  printer.rs  writeback.rs
web_application/: Cargo.toml  index.html  processed_results.csv  results.csv  style.css
web_application/src/: basic.frag  components.rs  engine.rs  execute.rs  forward.rs  graphics.rs  lib.rs  main.rs  main3.rs  mem_access.rs  misc.rs  pipelines.rs  printer.rs  simulator_engine.rs  test_2.rs
web_application/src/dir/: test_3.rs
web_application/src/engine/: components.rs  simulator.rs  stages.rs
web_application/src/engine/components/: forward.rs  hazard.rs  registers.rs
web_application/src/engine/stages/: decode.rs  execute.rs  fetch.rs  mem_access.rs  writeback.rs
web_application/src/graphics/: basic.frag  basic.vert  components.rs  pipelines.rs
web_application/src/misc/: isa_simulator.rs  printer.rs  test_runner.rs
web_application/src/simulator_engine/: control.rs  decode.rs  hazard.rs  registers.rs  simulator_engine.rs  writeback.rs
web_application/tests/: test_control_flow.rs  test_load_store.rs  test_register_immediate.rs  test_register_register.rs
