[package]
name = "web_application"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Monrad Laursen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = "0.19" 
gloo-file = "0.2"
gloo-render = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'File',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]

[profile.dev]
overflow-checks = false